# ConstellationStudio

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  fix_frame_data.py
.github/: project-info.yml
.github/workflows/: ci.yml  claude.yml  code-review.yml  code-review.yml.disabled
crates/constellation-3d/: Cargo.toml
crates/constellation-3d/src/: lib.rs
crates/constellation-audio/: Cargo.toml
crates/constellation-audio/src/: lib.rs
crates/constellation-core/: Cargo.toml
crates/constellation-core/src/: error.rs  hardware.rs  lib.rs  resilience.rs  telemetry.rs
crates/constellation-nodes/: Cargo.toml
crates/constellation-nodes/src/: controller.rs  effects.rs  input.rs  lib.rs  output.rs
crates/constellation-nodes/src/camera/: mod.rs  platform.rs
crates/constellation-nodes/src/camera/platform/: linux.rs  macos.rs  windows.rs
crates/constellation-nodes/src/capture/: linux.rs  macos.rs  mod.rs  screen_capture.rs  window_capture.rs  windows.rs
crates/constellation-nodes/src/capture/macos/: macos_screen_capture_kit.rs  mod.rs
crates/constellation-nodes/src/controller/: lfo.rs  math.rs  mod.rs  timeline.rs
crates/constellation-nodes/src/video_file/: mod.rs
crates/constellation-nodes/src/virtual_camera/: linux.rs  macos.rs  mod.rs  windows.rs
crates/constellation-nodes/tests/: integration_camera_input.rs  integration_capture.rs  integration_effects.rs  integration_video_file_input.rs  integration_virtual_webcam.rs
crates/constellation-pipeline/: Cargo.toml
crates/constellation-pipeline/src/: lib.rs
crates/constellation-pipeline/tests/: test_input_output_flow.rs  test_virtual_webcam_flow.rs
crates/constellation-vulkan/: Cargo.toml
crates/constellation-vulkan/src/: lib.rs
crates/constellation-web/: Cargo.toml
crates/constellation-web/src/: api.rs  dev_server.rs  lib.rs  main.rs  websocket.rs
examples/: error_handling_demo.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  index.ts
frontend/src/components/: AudioLevelMeter.tsx  ConstellationEdge.tsx  ConstellationNode.tsx  ControllerPreview.tsx  NodeEditor.tsx  NodePalette.tsx  NotificationSystem.tsx  ParameterPanel.tsx  PerformanceMonitor.tsx  PreviewMonitorPanel.tsx  ProjectPanel.tsx  SettingsPanel.tsx  VideoPreview.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/stores/: useNodeStore.ts
frontend/src/types/: index.ts  project.ts
frontend/src/utils/: projectManager.ts
scripts/: ci-check.sh
src/: main.rs
