[workspace]
members = [
    "crates/constellation-core",
    "crates/constellation-vulkan",
    "crates/constellation-nodes",
    "crates/constellation-pipeline",
    "crates/constellation-audio",
    "crates/constellation-web",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
winit = "0.29"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true