[package]
name = "constellation-audio"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["MACHIKO LAB"]
repository = "https://github.com/PaprikaEngine/ConstellationStudio"
description = "Audio processing for Constellation Studio"

[dependencies]
constellation-core = { path = "../constellation-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }