[package]
name = "constellation-nodes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["MACHIKO LAB"]
repository = "https://github.com/PaprikaEngine/ConstellationStudio"
description = "Node implementations for Constellation Studio - input, output, and processing nodes"

[features]
default = []
test-capture-backends = []

[dependencies]
constellation-core = { path = "../constellation-core" }
constellation-vulkan = { path = "../constellation-vulkan" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Camera capture dependencies
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi", 
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
core-media = "0.1"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
block = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
xcb = "1.2"
libc = "0.2"