[package]
name = "constellation-pipeline"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["MACHIKO LAB"]
repository = "https://github.com/PaprikaEngine/ConstellationStudio"
description = "Processing pipeline for Constellation Studio"

[dependencies]
constellation-core = { path = "../constellation-core" }
constellation-vulkan = { path = "../constellation-vulkan" }
constellation-nodes = { path = "../constellation-nodes" }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }