[package]
name = "constellation-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"