[package]
name = "constellation-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "constellation-server"
path = "src/main.rs"

[dependencies]
constellation-core = { path = "../constellation-core" }
constellation-nodes = { path = "../constellation-nodes" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }